--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular-in-memory-web-api": "^0.3.1",
+    "systemjs": "0.19.40",
     "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "rxjs": "5.1.1",
+    "zone.js": "^0.7.7"
   },
   "devDependencies": {
     "@angular/cli": "1.2.1",
